# kanban

./: .gitignore  README.md  pyproject.toml
.claude/agent-memory/unit-test-writer/: MEMORY.md  feedback_isolation.md  project_testing.md
controlplane/: github_client.py  github_sync.py  logging_config.py  models.py  runner.py  server.py  store.py  supervisor.py  worktree.py
controlplane/prompts/: code_reviewer.md  code_worker.md  freebase.md  planner.md  triage.md
docs/: ARCHITECTURE.md  TROUBLESHOOTING.md
tests/: conftest.py  test_api.py  test_models.py  test_runner.py  test_store.py
ui/: index.html
